--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
 # Ref MCP Server Configuration
 REF_API_KEY=your_ref_api_key_here
+
+# Supabase MCP Server Configuration
+SUPABASE_ACCESS_TOKEN=your_supabase_access_token_here
