--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@ REF_API_KEY=your_ref_api_key_here
 
 # Supabase MCP Server Configuration
 SUPABASE_ACCESS_TOKEN=your_supabase_access_token_here
+
+# Apify MCP Server Configuration
+APIFY_API_TOKEN=your_apify_api_token_here
