--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,9 @@ REF_API_KEY=your_ref_api_key_here
 # Supabase MCP Server Configuration
 SUPABASE_ACCESS_TOKEN=your_supabase_access_token_here
 
+# Agent Zero MCP Server Configuration
+AGENT_ZERO_BASE_URL=https://your_agent_zero_base_url/mcp
+AGENT_ZERO_TOKEN=your_agent_zero_base_inside_url
+
 # Apify MCP Server Configuration
 APIFY_API_TOKEN=your_apify_api_token_here
