Pencil mcp added

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,5 @@ AGENT_ZERO_TOKEN=your_agent_zero_base_inside_url
 
 # Apify MCP Server Configuration
 APIFY_API_TOKEN=your_apify_api_token_here
+
+PENCIL_MCP_PATH=your_path_to_mcp
